# game-jam

./: Cargo.toml  LICENSE.md
assets/: Map.ldtk  Plan.plan  glass_bottle.aseprite  glass_bottle_broken.aseprite  main_enemy.aseprite  player.aseprite  tilemap.aseprite
assets/shaders/: custom_material_chromatic_aberration.wgsl
src/: components.rs  main.rs  systems.rs
src/states/: menu.rs  mod.rs  splashscreen.rs
src/states/game/: components.rs  systems.rs
